unneeded-cast: Improve warning message for unneeded qobject_cast

Instead of saying that no cast to base is needed, simply say that
no qobject_cast is needed. Since a static_cast might still be needed.

This is the case for the ternary operator.

BUG: 407981